@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.user.country.pagemode {

        class WorldIndicatorsPageModContentFactoryImpl [[WorldIndicatorsPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class CountryRankingOverviewPageModContentFactoryImpl [[CountryRankingOverviewPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- WorldIndicatorsPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- CountryRankingOverviewPageModContentFactoryImpl
    }

    namespace com.hack23.cia.web.impl.ui.application.views.common.pagemode {
        abstract class AbstractBasicPageModContentFactoryImpl [[../../../common/pagemode/AbstractBasicPageModContentFactoryImpl.html]]
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
